--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@angular/router": "^17.2.0",
     "@ngrx/effects": "^17.1.1",
     "@ngrx/store": "^17.1.1",
+    "angular-d3-cloud": "^2.0.3",
+    "chart.js": "^4.4.2",
     "primeflex": "^3.3.1",
     "primeicons": "^6.0.1",
     "primeng": "^17.9.0",
