--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@ngrx/store": "^17.1.1",
     "angular-d3-cloud": "^2.0.3",
     "chart.js": "^4.4.2",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "primeflex": "^3.3.1",
     "primeicons": "^6.0.1",
     "primeng": "^17.9.0",
