--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "angular-d3-cloud": "^2.0.3",
     "chart.js": "^4.4.2",
     "chartjs-plugin-datalabels": "^2.2.0",
+    "moment": "^2.30.1",
     "primeflex": "^3.3.1",
     "primeicons": "^6.0.1",
     "primeng": "^17.9.0",
