--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "@angular/platform-browser": "^17.2.0",
     "@angular/platform-browser-dynamic": "^17.2.0",
     "@angular/router": "^17.2.0",
+    "@asymmetrik/ngx-leaflet": "^17.0.0",
     "@ngrx/effects": "^17.1.1",
     "@ngrx/store": "^17.1.1",
     "angular-d3-cloud": "^2.0.3",
     "chart.js": "^4.4.2",
     "chartjs-chart-treemap": "^2.3.0",
     "chartjs-plugin-datalabels": "^2.2.0",
+    "leaflet": "^1.9.4",
     "moment": "^2.30.1",
     "primeflex": "^3.3.1",
     "primeicons": "^6.0.1",
@@ -37,6 +39,7 @@
     "@angular/cli": "^17.2.0",
     "@angular/compiler-cli": "^17.2.0",
     "@types/jasmine": "~5.1.0",
+    "@types/leaflet": "^1.9.8",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
