--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "chartjs-chart-treemap": "^2.3.0",
     "chartjs-plugin-datalabels": "^2.2.0",
     "leaflet": "^1.9.4",
+    "lodash": "^4.17.21",
     "moment": "^2.30.1",
     "primeflex": "^3.3.1",
     "primeicons": "^6.0.1",
@@ -40,6 +41,7 @@
     "@angular/compiler-cli": "^17.2.0",
     "@types/jasmine": "~5.1.0",
     "@types/leaflet": "^1.9.8",
+    "@types/lodash": "^4.17.0",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
