--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
+    "dev": "npm install && npm run start",
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
@@ -19,22 +20,23 @@
     "@angular/platform-browser-dynamic": "^17.2.0",
     "@angular/router": "^17.2.0",
     "@asymmetrik/ngx-leaflet": "^17.0.0",
-    "@ngrx/effects": "^17.1.1",
-    "@ngrx/store": "^17.1.1",
-    "angular-d3-cloud": "^2.0.3",
-    "chart.js": "^4.4.2",
-    "chartjs-chart-treemap": "^2.3.0",
+    "@ngrx/effects": "^17.2.0",
+    "@ngrx/store": "^17.2.0",
+    "angular-d3-cloud": "^17.0.0",
+    "angular-svg-icon": "^17.0.0",
+    "chart.js": "^4.4.3",
+    "chartjs-chart-treemap": "^2.3.1",
     "chartjs-plugin-datalabels": "^2.2.0",
     "html2canvas": "^1.4.1",
     "leaflet": "^1.9.4",
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
     "primeflex": "^3.3.1",
-    "primeicons": "^6.0.1",
-    "primeng": "^17.13.0",
-    "rxjs": "~7.8.0",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.14.3"
+    "primeicons": "^7.0.0",
+    "primeng": "^17.18.8",
+    "rxjs": "^7.8.1",
+    "tslib": "^2.6.3",
+    "zone.js": "^0.14.10"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^17.2.0",
