--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
+    "dev": "npm i --force && npm run start",
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
@@ -21,7 +22,8 @@
     "@asymmetrik/ngx-leaflet": "^17.0.0",
     "@ngrx/effects": "^17.1.1",
     "@ngrx/store": "^17.1.1",
-    "angular-d3-cloud": "^2.0.3",
+    "angular-d3-cloud": "^17.0.0",
+    "angular-svg-icon": "^17.0.0",
     "chart.js": "^4.4.2",
     "chartjs-chart-treemap": "^2.3.0",
     "chartjs-plugin-datalabels": "^2.2.0",
@@ -30,7 +32,7 @@
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
     "primeflex": "^3.3.1",
-    "primeicons": "^6.0.1",
+    "primeicons": "^7.0.0",
     "primeng": "^17.13.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
