--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@ngrx/store": "^17.1.1",
     "angular-d3-cloud": "^17.0.0",
     "angular-svg-icon": "^17.0.0",
+    "highcharts": "^11.4.7",
+    "highcharts-angular": "^4.0.1",
     "chart.js": "^4.4.2",
     "chartjs-chart-treemap": "^2.3.0",
     "chartjs-plugin-datalabels": "^2.2.0",
